                                 Muldis::D
---------------------------------------------------------------------------

2008-07-xx  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.41.0 is released on CPAN as
    Muldis-D-0.41.0.tar.gz.

    * New file versions are: D.pm 0.41.0 and Basics.pod 0.27.1 and
    HDMD_Perl_Tiny.pod 0.22.1.  The other pre-existing versioned files are
    unchanged.

    * (Basics.pod, HDMD_Perl_Tiny.pod)  Fixed typos.

    * Rewrote the slideshow "archives/Muldis_D_PDAFP_200807.xul" so it has
    more appropriate content, and is a better length.

2008-07-08  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.40.0 is released on CPAN as
    Muldis-D-0.40.0.tar.gz.

    * New file versions are: D.pm 0.40.0.  The other pre-existing versioned
    files are unchanged.

    * Added new file "archives/Muldis_D_PDAFP_200807.xul" which is the very
    rough first draft of the slideshow for the 2008 July talk "Muldis D -
    Portable Databases At Full Power".  This talk is created for giving at
    OSCON 2008, and it is also being given at several other events in 2008
    July.  Following a practice presentation on 2008 July 8th, which used
    the (first half of) this exact file (except new postscript first
    screen), it was decided to completely rewrite the slideshow with
    different content.  Meanwhile this version is now being released on
    CPAN for posterity.  The next CPAN release of Muldis D will not have
    this version, rather its replacement.  This talk is a XUL file and it
    requires Mozilla Firefox to run (or you can read its text in a text
    editor).  Also added the 2 support files "archives/takahashi.(css|js)"
    plus the file "archives/README".

2008-07-04  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.39.0 is released on CPAN as
    Muldis-D-0.39.0.tar.gz.

    * New file versions are: D.pm 0.39.0 and Types_Catalog.pod 0.33.0 and