@@ -9,7 +9,7 @@ How to format Perl Hosted Data Muldis D
 
 =head1 VERSION
 
-This document is Muldis::D::Dialect::HDMD_Perl_Tiny version 0.22.0.
+This document is Muldis::D::Dialect::HDMD_Perl_Tiny version 0.22.1.
 
 =head1 PREFACE
 
