@@ -1,7 +1,7 @@
                                  Muldis::D
 ---------------------------------------------------------------------------
 
-2008-07-xx  Darren Duncan <perl@DarrenDuncan.net>
+2008-07-15  Darren Duncan <perl@DarrenDuncan.net>
 
     * Muldis::D version 0.41.0 is released on CPAN as
     Muldis-D-0.41.0.tar.gz.
@@ -13,7 +13,13 @@
     * (Basics.pod, HDMD_Perl_Tiny.pod)  Fixed typos.
 
     * Rewrote the slideshow "archives/Muldis_D_PDAFP_200807.xul" so it has
-    more appropriate content, and is a better length.
+    more appropriate content, and is a better length.  While this version
+    should be complete on talking about Muldis D, it still lacks anything
+    on Muldis Rosetta, which should end up about 10% of the size, except
+    that there are internal todo notes on this.  And next I'll need to chop
+    down the size of the new version so it can be presented in about 45
+    minutes, for which I'll solicit advice.  That cut version should be in
+    a near future subsequent release.
 
 2008-07-08  Darren Duncan <perl@DarrenDuncan.net>
 
